Fix text overflowing container in search results https://trello.com/c/le08Wdsq

--- a/src/components/SearchResult/SearchResult.scss
+++ b/src/components/SearchResult/SearchResult.scss
@@ -10,7 +10,7 @@
   background: var(--primary-color);
   border: 1px solid $gray12;
   border: 1px solid var(--border-color);
-
+  overflow-wrap: break-word;
   &.selected {
     background: $gray10;
     color: #333333;
